--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="grape-theme">
+<body class="grape-theme mat-typography">
   <app-root></app-root>
 </body>
 
